add errors collection from antlr's and javac